--- a/canvasGame/index.html
+++ b/canvasGame/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>game</title>
+	<title>Jins Game</title>
 </head>
 <body>
+	<h1>Fork me on : https://github.com/rockjins/Jins</h1>
 <script type="text/javascript">
 console.log("*作者：周震\n*时间：2016-05-30\n*QQ：1300327885");
 	//创建画布
