--- a/canvasGame/index.html
+++ b/canvasGame/index.html
@@ -5,7 +5,7 @@
 	<title>Jins Game</title>
 </head>
 <body>
-	<h1>Fork me on <a href = "https://github.com/rockjins/Jins">Github</a> </h1>
+	<h1>Fork me on <a href = "https://github.com/rockjins/Jins" style="text-decoretion:none;color:hotpink;">Github</a> </h1>
 <script type="text/javascript">
 console.log("*作者：周震\n*时间：2016-05-30\n*QQ：1300327885");
 	//创建画布
