--- a/canvasGame/index.html
+++ b/canvasGame/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 	<h1>Fork me on <a href = "https://github.com/rockjins/Jins" style="text-decoration:none;color:hotpink;" target="_blank">Github</a> </h1>
+	<h3>使用方向键控制</h3>
 <script type="text/javascript">
 console.log("*作者：周震\n*时间：2016-05-30\n*QQ：1300327885");
 	//创建画布
@@ -117,6 +118,10 @@ console.log("*作者：周震\n*时间：2016-05-30\n*QQ：1300327885");
 	reset();
 	var then = Date.now();
 	setInterval(main,1);
+	setTimeout(function(){
+		var h = document.querySelector("h3");
+		body.removeChild(h);
+	},3000);
 </script>
 </body>
 </html>
