--- a/canvasGame/index.html
+++ b/canvasGame/index.html
@@ -120,7 +120,7 @@ console.log("*作者：周震\n*时间：2016-05-30\n*QQ：1300327885");
 	setInterval(main,1);
 	setTimeout(function(){
 		var h = document.querySelector("h3");
-		body.removeChild(h);
+		document.body.removeChild(h);
 	},3000);
 </script>
 </body>
