--- a/day/index.html
+++ b/day/index.html
@@ -52,6 +52,7 @@
 			<div class="swiper-slide"><img data-src="36.jpg" class="swiper-lazy"></div>
 			<div class="swiper-slide"><img data-src="37.jpg" class="swiper-lazy"></div>
 			<div class="swiper-slide"><img data-src="38.jpg" class="swiper-lazy"></div>
+			<div class="swiper-slide"><img data-src="39.jpg" class="swiper-lazy"></div>
     </div>
 			<div id="title">1 Day</div>
     </div>
