--- a/day/index.html
+++ b/day/index.html
@@ -32,7 +32,7 @@
 		lazyLoadingInPrevNext : true,
 		lazyLoadingInPrevNextAmount : 3,
 		lazyLoadingOnTransitionStart : true,
-		onSlideChangeStart:function(swiper){
+		onSlideChangeEnd:function(swiper){
 			var title = document.querySelector("#title");
 			title.innerHTML=jins.activeIndex+1+" Day";
 			if (appendNumber<=38) {
