--- a/ff/index.html
+++ b/ff/index.html
@@ -66,7 +66,7 @@
 		lazyLoadingInPrevNext : true,
 		lazyLoadingInPrevNextAmount : 3,
 		lazyLoadingOnTransitionStart : true,
-		onSlideChangeStart:function(swiper){
+		onSlideChangeEnd:function(swiper){
 			var title = document.querySelector("#title");
 			title.innerHTML=jins.activeIndex+1+" Day ↑";
 		}
