--- a/ff/index.html
+++ b/ff/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Jins</title>
+	<title>Feifei</title>
 	<link rel="stylesheet" type="text/css" href="swiper.min.css">
 	<style type="text/css">
 		img{width: 200px;height: 350px;box-shadow: 5px 5px 20px 0px #666;border-radius: 20px;}
@@ -18,45 +18,11 @@
 			<div class="swiper-slide"><img data-src="2.jpg" class="swiper-lazy"></div>
 			<div class="swiper-slide"><img data-src="3.jpg" class="swiper-lazy"></div>
 			<div class="swiper-slide"><img data-src="4.jpg" class="swiper-lazy"></div>
-			<div class="swiper-slide"><img data-src="5.jpg" class="swiper-lazy"></div>
-			<div class="swiper-slide"><img data-src="6.jpg" class="swiper-lazy"></div>
-			<div class="swiper-slide"><img data-src="7.jpg" class="swiper-lazy"></div>
-			<div class="swiper-slide"><img data-src="8.jpg" class="swiper-lazy"></div>
-			<div class="swiper-slide"><img data-src="9.jpg" class="swiper-lazy"></div>
-			<div class="swiper-slide"><img data-src="10.jpg" class="swiper-lazy"></div>
-			<div class="swiper-slide"><img data-src="11.jpg" class="swiper-lazy"></div>
-			<div class="swiper-slide"><img data-src="12.jpg" class="swiper-lazy"></div>
-			<div class="swiper-slide"><img data-src="13.jpg" class="swiper-lazy"></div>
-			<div class="swiper-slide"><img data-src="14.jpg" class="swiper-lazy"></div>
-			<div class="swiper-slide"><img data-src="15.jpg" class="swiper-lazy"></div>
-			<div class="swiper-slide"><img data-src="16.jpg" class="swiper-lazy"></div>
-			<div class="swiper-slide"><img data-src="17.jpg" class="swiper-lazy"></div>
-			<div class="swiper-slide"><img data-src="18.jpg" class="swiper-lazy"></div>
-			<div class="swiper-slide"><img data-src="19.jpg" class="swiper-lazy"></div>
-			<div class="swiper-slide"><img data-src="20.jpg" class="swiper-lazy"></div>
-			<div class="swiper-slide"><img data-src="21.jpg" class="swiper-lazy"></div>
-			<div class="swiper-slide"><img data-src="22.jpg" class="swiper-lazy"></div>
-			<div class="swiper-slide"><img data-src="23.jpg" class="swiper-lazy"></div>
-			<div class="swiper-slide"><img data-src="24.jpg" class="swiper-lazy"></div>
-			<div class="swiper-slide"><img data-src="25.jpg" class="swiper-lazy"></div>
-			<div class="swiper-slide"><img data-src="26.jpg" class="swiper-lazy"></div>
-			<div class="swiper-slide"><img data-src="27.jpg" class="swiper-lazy"></div>
-			<div class="swiper-slide"><img data-src="28.jpg" class="swiper-lazy"></div>
-			<div class="swiper-slide"><img data-src="29.jpg" class="swiper-lazy"></div>
-			<div class="swiper-slide"><img data-src="30.jpg" class="swiper-lazy"></div>
-			<div class="swiper-slide"><img data-src="31.jpg" class="swiper-lazy"></div>
-			<div class="swiper-slide"><img data-src="32.jpg" class="swiper-lazy"></div>
-			<div class="swiper-slide"><img data-src="33.jpg" class="swiper-lazy"></div>
-			<div class="swiper-slide"><img data-src="34.jpg" class="swiper-lazy"></div>
-			<div class="swiper-slide"><img data-src="35.jpg" class="swiper-lazy"></div>
-			<div class="swiper-slide"><img data-src="36.jpg" class="swiper-lazy"></div>
-			<div class="swiper-slide"><img data-src="37.jpg" class="swiper-lazy"></div>
-			<div class="swiper-slide"><img data-src="38.jpg" class="swiper-lazy"></div>
-			<div class="swiper-slide"><img data-src="39.jpg" class="swiper-lazy"></div>
     </div>
-			<div id="title">1 Day ↑</div>
+			<div id="title">1 Day ↑ 滑动</div>
     </div>
     <script>
+    var appendNumber = 5
      var jins =new Swiper('.swiper-container',{
      	direction:'vertical',
      	loop:false,
@@ -68,7 +34,11 @@
 		lazyLoadingOnTransitionStart : true,
 		onSlideChangeEnd:function(swiper){
 			var title = document.querySelector("#title");
-			title.innerHTML=jins.activeIndex+1+" Day ↑";
+			title.innerHTML=jins.activeIndex+1+" Day";
+			if (appendNumber<=15) {
+				swiper.appendSlide('<div class="swiper-slide"><img data-src="'+appendNumber+'.jpg" class="swiper-lazy"></div>');
+				appendNumber++;
+			}
 		}
      });
     </script>
