--- a/ff/index.html
+++ b/ff/index.html
@@ -25,7 +25,7 @@
     var appendNumber = 5
      var jins =new Swiper('.swiper-container',{
      	direction:'vertical',
-     	loop:false,
+     	loop:true,
      	autoplay:0,
      	effect:"cube",
      	lazyLoading : true,
