--- a/ff/index.html
+++ b/ff/index.html
@@ -6,7 +6,7 @@
 	<title>Jins</title>
 	<link rel="stylesheet" type="text/css" href="swiper.min.css">
 	<style type="text/css">
-		img{width: 200px;height: 266;box-shadow: 5px 5px 20px 0px #666;border-radius: 20px;}
+		img{width: 200px;height: 266px;box-shadow: 5px 5px 20px 0px #666;border-radius: 20px;}
 		#title{font-size: 50px;font-weight: 600;font-family: fantasy;position: absolute;z-index: 10000;}
 	</style>
 	<script src="swiper.min.js"></script>
