--- a/ff/index.html
+++ b/ff/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Jins</title>
+	<title>Feifei</title>
 	<link rel="stylesheet" type="text/css" href="swiper.min.css">
 	<style type="text/css">
 		img{width: 200px;height: 280px;box-shadow: 5px 5px 20px 0px #666;border-radius: 20px;}
