--- a/src/html/shoplist.html
+++ b/src/html/shoplist.html
@@ -143,7 +143,7 @@
 			<i class="iconfont">&#xe604;</i>
 			<p>购物车</p>
 		</a>
-		<a href="#" class="bottom-item bottom-item4">
+		<a href="usermanage.html" class="bottom-item bottom-item4">
 			<i class="iconfont">&#xe608;</i>
 			<p>我的秀</p>
 		</a>
