--- a/src/html/usermanage.html
+++ b/src/html/usermanage.html
@@ -47,7 +47,7 @@
 			<i class="iconfont">&#xe606;</i>
 			<p>首页</p>
 		</a>
-		<a href="#" class="bottom-item bottom-item2">
+		<a href="shoplist.html" class="bottom-item bottom-item2">
 			<i class="iconfont">&#xe601;</i>
 			<p>分类</p>
 		</a>
