--- a/bibicar/index.html
+++ b/bibicar/index.html
@@ -2,8 +2,8 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<meta content="width=device-width, initial-scale=1.0,
-		maximum-scale=1.0,minmun-scanle=1.0, user-scalable=0"  name="viewport"/>
+		<meta  name="viewport" content="width=device-width,initial-scale=1.0,
+		maximum-scale=1.0,minmun-scanle=1.0, user-scalable=0"/>
 		<title>BiBiCAR</title>
 		<link rel="stylesheet" href="css/index.css" />
 	</head>
@@ -27,7 +27,7 @@
 					</p>
 			</div>
 			<div class="appstore">
-				<a id="selectBtn" href="">
+				<a id="selectBtn" href="http://mp.weixin.qq.com/mp/redirect?url=https%3A%2F%2Fappsto.re%2Fcn%2FHogzbb.i">
 					<div>
 						<b>点击进入</b>
 						<b>APP&nbsp;STORE</b>
@@ -45,18 +45,16 @@
 			<p></p>
 		</footer>
 		<script>
-var u = navigator.userAgent, app = navigator.appVersion;  
-var isAndroid = u.indexOf('Android') > -1 || u.indexOf('Linux') > -1; //android终端或者uc浏览器  
-var isiOS = !!u.match(/\(i[^;]+;( U;)? CPU.+Mac OS X/); //ios终端  
+// var u = navigator.userAgent, app = navigator.appVersion;  
+// var isAndroid = u.indexOf('Android') > -1 || u.indexOf('Linux') > -1; //android终端或者uc浏览器
    
-var selectBtn=document.getElementById("selectBtn");  
-selectBtn.onclick=function(){  
-    if(isAndroid==true){
-			alert("Android版APP正在开发中，敬请期待")
-    }else{
-    		this.href="https://appsto.re/cn/Hogzbb.i";
- 	}  
-}  
+// var selectBtn=document.getElementById("selectBtn");  
+// selectBtn.onclick=function(){  
+//     if(isAndroid==true){
+// 			alert("Android版APP正在开发中，敬请期待")
+//     		return false;
+//     } 
+// }  
 		</script>
 	</body>
 </html>
