--- a/bibicar/index.html
+++ b/bibicar/index.html
@@ -27,7 +27,7 @@
 					</p>
 			</div>
 			<div class="appstore">
-				<a id="selectBtn" href="http://mp.weixin.qq.com/mp/redirect?url=https%3A%2F%2Fappsto.re%2Fcn%2FHogzbb.i">
+				<a id="selectBtn" href="https://itunes.apple.com/cn/app/bibi-car/id1097098145?l=en&mt=8">
 					<div>
 						<b>点击进入</b>
 						<b>APP&nbsp;STORE</b>
@@ -45,16 +45,16 @@
 			<p></p>
 		</footer>
 		<script>
-// var u = navigator.userAgent, app = navigator.appVersion;  
-// var isAndroid = u.indexOf('Android') > -1 || u.indexOf('Linux') > -1; //android终端或者uc浏览器
+var u = navigator.userAgent, app = navigator.appVersion;  
+var isAndroid = u.indexOf('Android') > -1 || u.indexOf('Linux') > -1; //android终端或者uc浏览器
    
-// var selectBtn=document.getElementById("selectBtn");  
-// selectBtn.onclick=function(){  
-//     if(isAndroid==true){
-// 			alert("Android版APP正在开发中，敬请期待")
-//     		return false;
-//     } 
-// }  
+var selectBtn=document.getElementById("selectBtn");  
+selectBtn.onclick=function(){  
+    if(isAndroid==true){
+			alert("Android版APP正在开发中，敬请期待")
+    		return false;
+    } 
+}  
 		</script>
 	</body>
 </html>
