--- a/goshow/index.html
+++ b/goshow/index.html
@@ -59,6 +59,7 @@
 			<i class="iconfont">&#xe609;</i>
 			<p>更多</p>
 		</a>
+		<span class="active-menu"></span>
 	</footer>
 	<div class="temp"></div>
 </body>
