--- a/goshow/index.html
+++ b/goshow/index.html
@@ -16,46 +16,25 @@
 	<header>
 		<img src="img/header.jpg">
 	</header>
-	<section>
-		<div class="search">
-			<div class="search-bar">
-				<img src="img/search.png">
-				<input type="search" name="search" placeholder="请输入搜索内容">
-			</div>
-		</div>
-		<div class="banner">
-		<div class="swiper-container">
-		 	<div class="swiper-wrapper">
-			    <div class="swiper-slide">
-				<img src="img/1.jpg"></div>
-			    <div class="swiper-slide">
-				<img src="img/2.jpg"></div>
-			    <div class="swiper-slide">
-				<img src="img/3.jpg"></div>
-		 	</div>
-		 	<div class="swiper-pagination"></div>
-		</div>
-		</div>
-		<div class="item-group"></div>
-	</section>
+	<section></section>
 	<footer>
-		<a class="menu" href="#">
+		<a class="menu" href="#" data-route="home">
 			<i class="iconfont">&#xe606;</i>
 			<p>首页</p>
 		</a>
-		<a class="menu" href="#">
+		<a class="menu" href="#" data-route="classfy">
 			<i class="iconfont">&#xe601;</i>
 			<p>分类</p>
 		</a>
-		<a class="menu" href="#">
+		<a class="menu" href="#" data-route="shopcar">
 			<i class="iconfont">&#xe604;</i>
 			<p>购物车</p>
 		</a>
-		<a class="menu" href="#">
+		<a class="menu" href="#" data-route="myshow">
 			<i class="iconfont">&#xe608;</i>
 			<p>我的秀</p>
 		</a>
-		<a class="menu" href="#">
+		<a class="menu" href="#" data-route="more">
 			<i class="iconfont">&#xe609;</i>
 			<p>更多</p>
 		</a>
