--- a/goshow/index.html
+++ b/goshow/index.html
@@ -16,7 +16,7 @@
 	<header>
 		<img src="img/header.jpg">
 	</header>
-	<section></section>
+	<section data-check="home"></section>
 	<footer>
 		<a class="menu" href="#" data-route="home">
 			<i class="iconfont">&#xe606;</i>
