--- a/goshow/index.html
+++ b/goshow/index.html
@@ -18,7 +18,7 @@
 	</header>
 	<section data-check="home"></section>
 	<footer>
-		<a class="menu" href="#" data-route="home">
+		<a class="menu menu-color" href="#" data-route="home">
 			<i class="iconfont">&#xe606;</i>
 			<p>首页</p>
 		</a>
