--- a/goshow/index.html
+++ b/goshow/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
 	<title>走秀网</title>
+	<link rel='icon' href='img/logo.ico ' type=‘image/x-ico’ /> 
 	<script src="common/rem.js"></script>
 	<link rel="stylesheet" href="lib/swiper.css">
 	<link rel="stylesheet" href="common/header.css">
