--- a/goshow/index.html
+++ b/goshow/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
 	<title>走秀网</title>
-	<link rel='icon' href='img/logo.ico ' type=‘image/x-ico’ /> 
+	<link rel='icon' href='img/logo.ico ' type=‘image/x-ico’/> 
 	<script src="common/rem.js"></script>
 	<link rel="stylesheet" href="lib/swiper.css">
 	<link rel="stylesheet" href="common/header.css">
@@ -17,25 +17,25 @@
 	<header>
 		<img src="img/header.jpg">
 	</header>
-	<section data-check="home"></section>
+	<section></section>
 	<footer>
-		<a class="menu menu-color" href="#" data-route="home">
+		<a class="menu" href="#" data-route="home" data-left="0">
 			<i class="iconfont">&#xe606;</i>
 			<p>首页</p>
 		</a>
-		<a class="menu" href="#" data-route="classfy">
+		<a class="menu" href="#" data-route="classfy" data-left="20%">
 			<i class="iconfont">&#xe601;</i>
 			<p>分类</p>
 		</a>
-		<a class="menu" href="#" data-route="shopcar">
+		<a class="menu" href="#" data-route="shopcar" data-left="40%">
 			<i class="iconfont">&#xe604;</i>
 			<p>购物车</p>
 		</a>
-		<a class="menu" href="#" data-route="myshow">
+		<a class="menu" href="#" data-route="myshow" data-left="60%">
 			<i class="iconfont">&#xe608;</i>
 			<p>我的秀</p>
 		</a>
-		<a class="menu" href="#" data-route="more">
+		<a class="menu" href="#" data-route="more" data-left="80%">
 			<i class="iconfont">&#xe609;</i>
 			<p>更多</p>
 		</a>
