--- a/React/index.html
+++ b/React/index.html
@@ -5,10 +5,12 @@
 		<meta charset="UTF-8">
 		<title>React学习笔记</title>
 		<style>
-			a{font-size: 30px;}
+		*{font-family: fantasy;}
+			a{font-size: 20px;text-decoration:none;color: hotpink;}
 		</style>
 	</head>
 	<body>
+		<h1>React学习笔记</h1>
 		<a href="https://zybuluo.com/zwkz520/note/407179">React学习笔记1</a><br /><br />
 		<a href="https://zybuluo.com/zwkz520/note/408269">React学习笔记2</a><br /><br />
 		<a href="https://zybuluo.com/zwkz520/note/408750">React学习笔记3</a><br /><br />
