--- a/React/index.html
+++ b/React/index.html
@@ -15,5 +15,6 @@
 		<a href="https://zybuluo.com/zwkz520/note/408269">React学习笔记2</a><br /><br />
 		<a href="https://zybuluo.com/zwkz520/note/408750">React学习笔记3</a><br /><br />
 		<a href="https://zybuluo.com/zwkz520/note/409336">React学习笔记4</a><br /><br />
+		<a href="http://www.cnblogs.com/chinajins/p/5594745.html">React+gulp+browserify模块化开发</a><br /><br />
 	</body>
 </html>
