--- a/React/index.html
+++ b/React/index.html
@@ -11,9 +11,9 @@
 	</head>
 	<body>
 		<h1>React学习笔记</h1>
-		<a href="https://zybuluo.com/zwkz520/note/407179">React学习笔记1</a><br /><br />
-		<a href="https://zybuluo.com/zwkz520/note/408269">React学习笔记2</a><br /><br />
-		<a href="https://zybuluo.com/zwkz520/note/408750">React学习笔记3</a><br /><br />
+		<a href="http://www.cnblogs.com/chinajins/p/5588646.html">React学习笔记1</a><br /><br />
+		<a href="http://www.cnblogs.com/chinajins/p/5588649.html">React学习笔记2</a><br /><br />
+		<a href="http://www.cnblogs.com/chinajins/p/5588650.html">React学习笔记3</a><br /><br />
 		<a href="https://zybuluo.com/zwkz520/note/409336">React学习笔记4</a><br /><br />
 		<a href="http://www.cnblogs.com/chinajins/p/5594745.html">React+gulp+browserify模块化开发</a><br /><br />
 	</body>
