--- a/React/index.html
+++ b/React/index.html
@@ -15,6 +15,7 @@
 		<a href="http://www.cnblogs.com/chinajins/p/5588649.html">React学习笔记2</a><br /><br />
 		<a href="http://www.cnblogs.com/chinajins/p/5588650.html">React学习笔记3</a><br /><br />
 		<a href="https://zybuluo.com/zwkz520/note/409336">React学习笔记4</a><br /><br />
+		<a href="https://zybuluo.com/zwkz520/note/410490">Sea.js+gulp实现react模块化开发</a><br /><br />
 		<a href="http://www.cnblogs.com/chinajins/p/5594745.html">React+gulp+browserify模块化开发</a><br /><br />
 	</body>
 </html>
