--- a/test/easyPHP/login.html
+++ b/test/easyPHP/login.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 	<form action="success.php" method="post">
-		<input type="text" name="username">
-		<input type="password" name="pwd">
+		用户名：<input type="text" name="username"><br/><br/>
+		密码：<input type="password" name="pwd"><br/><br/>
 		<input type="submit" name="submit" value="提交">
 	</form>
 </body>
