--- a/test/notes/javascript.html
+++ b/test/notes/javascript.html
@@ -6,16 +6,27 @@
 	<style type="text/css">
 		body{padding: 30px;background-color: #f5f5d5;color: #333;}
 		h1{font-family: fantasy;}
-		.main{box-shadow: 0 0 8px #000;list-style: none;display: block;width: 1000px;margin: 0 auto;padding: 30px;}
+		.main{box-shadow: 0 0 8px #000;list-style: none;display: block;width: 1000px;margin: 0 auto;padding: 30px;border-radius: 20px;}
 		.main li{font-family: 'Microsoft yahei';line-height: 40px;font-size: 18px;}
+		code{background-color: #F5F2F0;display: block;border-radius: 10px;padding: 5px 50px 5px 50px;border:3px solid #E0DFCC;}
 	</style>
 </head>
 <body>
 	<h1>Javascrit Notes</h1>
 	<ul class="main">
-		<li>1.typeof产生的结果只有6种:'number','string','boolean','undefined','function'和'object'.如果运算数是一个数组或null,产生的结果仍然是object;</li>
-		<li>2.运算符&&的第一个运算数的值为false,则不判断第二个运算数.运算符||的第一个运算数的值为true,则不判断第二个运算数;</li>
-		<li>3.</li>
+		<li><p>1.typeof产生的结果只有6种:'number','string','boolean','undefined','function'和'object';如果运算数是一个数组或null,产生的结果仍然是object;</p></li>
+		<li><p>2.运算符&&的第一个运算数的值为false,则不判断第二个运算数;运算符||的第一个运算数的值为true,则不判断第二个运算数;</p></li>
+		<li>
+			<p>3.检索一个undefined值会导致TypeError异常，可以用&&避免错误;</p>
+				<code>
+					<p>People.someone ==>//undefined</p>
+					<p>People.someone.sex ==>//throw "TypeError"</p>
+					<p>People.someone&&People.someone.sex ==>//undefined</p>
+				</code>
+			<p>Tip:因为&&读到第一个值为false就不会读第二个值;</p>
+		</li>
+		<li><p>4.对象通过引用来传递,永远不会被拷贝;</p></li>
+		<li><p>5.所谓编程,就是将一组需求分解成一组函数与数据结构的技能;</p></li>
 	</ul>
 </body>
 </html>
