--- a/test/notes/javascript.html
+++ b/test/notes/javascript.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 	<title>notes</title>
 	<style type="text/css">
 		body{padding: 30px;background-color: #f5f5d5;color: #333;}
