--- a/test/notes/javascriptMin.html
+++ b/test/notes/javascriptMin.html
@@ -5,20 +5,12 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 	<title>notes</title>
 	<style type="text/css">
-		body{padding: 30px;background-color: #f5f5d5;color: #333;}
+		body{padding: 10px;background-color: #f5f5d5;color: #333;}
 		h1{font-family: fantasy;}
-		.main{box-shadow: 0 0 8px #000;list-style: none;display: block;width: 1000px;margin: 0 auto;padding: 30px;border-radius: 20px;}
+		.main{box-shadow: 0 0 8px #000;list-style: none;padding: 10px;border-radius: 20px;word-break:break-all;}
 		.main li{font-family: 'Microsoft yahei';line-height: 40px;font-size: 18px;}
 		code{background-color: #F5F2F0;display: block;border-radius: 10px;padding: 5px 50px 5px 50px;border:3px solid #E0DFCC;}
 	</style>
-	<script type="text/javascript">
-		(function(){
-			var w = document.documentElement.clientWidth;
-			if (w<700) {
-				window.href='https://rockjins.github.io/Jins/test/notes/javascriptMin.html';
-			}
-		})()
-	</script>
 </head>
 <body>
 	<h1>Javascrit Notes</h1>
