--- a/test/notes/javascript.html
+++ b/test/notes/javascript.html
@@ -15,7 +15,7 @@
 		(function(){
 			var w = document.documentElement.clientWidth;
 			if (w<700) {
-				window.href='https://rockjins.github.io/Jins/test/notes/javascriptMin.html';
+				window.location.href='https://rockjins.github.io/Jins/test/notes/javascriptMin.html';
 			}
 		})()
 	</script>
