--- a/test/notes/javascript.html
+++ b/test/notes/javascript.html
@@ -11,16 +11,9 @@
 		.main li{font-family: 'Microsoft yahei';line-height: 40px;font-size: 18px;}
 		code{background-color: #F5F2F0;display: block;border-radius: 10px;padding: 5px 50px 5px 50px;border:3px solid #E0DFCC;}
 	</style>
-	<script type="text/javascript">
-		(function(){
-			var w = document.documentElement.clientWidth;
-			if (w<700) {
-				window.location.href='https://rockjins.github.io/Jins/test/notes/javascriptMin.html';
-			}
-		})()
-	</script>
 </head>
 <body>
+	<a id="moble" href="https://rockjins.github.io/Jins/test/notes/javascriptMin.html" style="display:none;text-decoration:none;color:red;">点击跳转到手机版</a>
 	<h1>Javascrit Notes</h1>
 	<ul class="main">
 		<li><p>1.typeof产生的结果只有6种:'number','string','boolean','undefined','function'和'object';如果运算数是一个数组或null,产生的结果仍然是object;</p></li>
@@ -37,5 +30,13 @@
 		<li><p>4.对象通过引用来传递,永远不会被拷贝;</p></li>
 		<li><p>5.所谓编程,就是将一组需求分解成一组函数与数据结构的技能;</p></li>
 	</ul>
+	<script type="text/javascript">
+		(function(){
+			var w = document.documentElement.clientWidth;
+			if (w<700) {
+				document.getElementById('moble').style.display='block';
+			}
+		})()
+	</script>
 </body>
 </html>
