--- a/test/notes/javascriptMin.html
+++ b/test/notes/javascriptMin.html
@@ -28,6 +28,10 @@
 		</li>
 		<li><p>4.对象通过引用来传递,永远不会被拷贝;</p></li>
 		<li><p>5.所谓编程,就是将一组需求分解成一组函数与数据结构的技能;</p></li>
+		<li>
+			<p>6.对函数的调用一共有四种调用模式:方法调用模式,函数调用模式,构造器调用模式,apply调用模式,每种模式在如何初始化关键参数this上存在差异;</p>
+			<p>方法调用模式:当一个函数被保存为对象的一个属性时,我们称它为方法.当一个方法被调用时,this被绑定到该对象.</p>
+		</li>
 	</ul>
 </body>
 </html>
