--- a/test/zz/tiger.html
+++ b/test/zz/tiger.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<link href="https://rockjins.github.io/Jins/test/zz/1.ico" type="image/x-icon" rel="shortcut icon" />
 	<title>Document</title>
 	<style type="text/css">
 		/* Colors */
