--- a/test/zz/tiger.html
+++ b/test/zz/tiger.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<link href="https://rockjins.github.io/Jins/test/zz/1.ico" type="image/x-icon" rel="shortcut icon" />
-	<title>Document</title>
+	<title>Tiger By SVG</title>
 	<style type="text/css">
 		/* Colors */
 .st0{fill:#FFE475;}
