--- a/test/zz/question.html
+++ b/test/zz/question.html
@@ -22,7 +22,7 @@
 			if (que==''||que==undefined||que==null||que=='undefined') {
 				alert('你别不写你的困扰啊！');
 			}else{
-				window.location.href='http://baidu.apphb.com/?q='+que;
+				window.location.href='http://www.baidu-x.com/?q='+que;
 			}
 		}
 	</script>
